Working on date color change

--- a/public/create.html
+++ b/public/create.html
@@ -67,7 +67,7 @@
         <!-- ############################################################################ -->
         <tr >
             <td class="left_column">
-              Department:
+              i-QRQC Level:
             </td>
             <td class="right_column">
               <select class="box_length" id="department">
@@ -77,18 +77,7 @@
                 <option value="Automation"  >Automation</option>
                 <option value="Office"      >Office</option>
                 <option value="Ship_Receive">Shipping/Receiving</option>
-              </select>
-            </td>
-        </tr>
-
-        <tr >
-            <td class="left_column">
-              QRQC Level:
-            </td>
-            <td class="right_column">
-              <select class="box_length" id="level">        <!-- RADIO BUTTONS-->
                 <option value="Mixing"      >Plant</option>
-                <option value="Cementing"   >APU</option>
               </select>
             </td>
         </tr>
@@ -120,7 +109,7 @@
             <td class="right_column">
               <select class="box_length" id="customer">
                 
-              </select>              
+              </select>        
             </td>
         </tr>
         <!-- ############################################################################ -->
