Adding more files

--- a/public/create.html
+++ b/public/create.html
@@ -18,7 +18,7 @@
   <body id="create_page">
     <section class="user-logged-in"> </section>
     <section class="page-title">
-      <h2 >I-QRQC - Grand Rapids - e-Alert</h2>
+      <h2 >i-QRQC - Grand Rapids - e-Lert</h2>
     </section>
     <section class="log-button ng-scope"> </section>
     
@@ -37,7 +37,7 @@
       <table class="inline_table" id="info_table">        
         <tr >
             <td class="left_column">
-              I-Notes Category:
+              i-Notes Category:
             </td>
             <td class="right_column">
               <select class="box_length" id="alert_type">
@@ -199,7 +199,7 @@
     </form>
     
     <div>
-      <button class="btn btn-blue" id="add_row" type="button">Add Row</button>
+      <button class="btn btn-blue" id="add_row" type="button">Add Action</button>
       <button class="btn btn-blue" id="submit_btn">Submit</button>
     </div> 
   </body>
