--- a/public/index.html
+++ b/public/index.html
@@ -62,17 +62,16 @@
     </table>
 
     <div class="mycontainer">
-      <span class="page-footer">
-        <span id="new-alert-p">Create a new alert:</span>
-        <div class="btn btn-white" id="new_alert_redirect">New Alert</div>
-      </span>
-    </div>
+      <table class="page-footer">
+        <tr>
+          <td class="btn btn-white table_button" id="new_alert_redirect">Create new e-Lert</td>
 
-    <div class="">
-      <span class="page-footer">
-        <p id="new-alert-p">Mixing Page</h3>
-        <a href="mixing.html"class="btn btn-blue">Mixing</a>
-      </span>
+          <td><a href="mixing.html" class="btn btn-white table_button" id="mixing_alert_redirect">Mixing e-Lerts</a></td>
+        
+          <td><a href="incomplete.html" class="btn btn-white table_button" id="incomplete_redirect">Incomplete e-Lerts</a></td>
+        </tr>
+      </table>
+
     </div>
   </body>
 </html>
