--- a/public/mixing.html
+++ b/public/mixing.html
@@ -60,10 +60,15 @@
     </table>
 
     <div class="mycontainer">
-      <span class="page-footer">
-        <p id="new-alert-p">Create a new alert:</h3>
-        <div class="btn btn-white" id="mixing_alert_redirect">New Mixing Alert</div>
-      </span>
+      <table class="page-footer">
+        <tr>
+          <td class="btn btn-white table_button" id="home_redirect">Return Home</td>
+
+          <td class="btn btn-white table_button" id="mixing_alert_redirect">New Mixing Alert</td>
+        </tr>
+      </table>
+
     </div>
+
   </body>
 </html>
