--- a/public/mixing_alert.html
+++ b/public/mixing_alert.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>e-Alert</title>
+    <title>e-Lert</title>
     
     <!-- Load CSS -->  
     <link rel="stylesheet" href="css/oc-modal.full.css">
@@ -18,7 +18,7 @@
   <body id="create_page">
     <section class="user-logged-in"> </section>
     <section class="page-title">
-      <h2 >I-QRQC - Mixing- e-Alert</h2>
+      <h2 >I-QRQC - Mixing- e-Lert</h2>
     </section>
     <section class="log-button ng-scope"> </section>
     
