--- a/public/admin/incomplete.html
+++ b/public/admin/incomplete.html
@@ -2,12 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Current e-Alerts</title>
+    <title>Incomplete e-Alerts</title>
     
     <!-- Load CSS -->  
-    <link rel="stylesheet" href="css/oc-modal.full.css">
-    <link rel="stylesheet" href="css/jquery.datetimepicker.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <!-- Load JavaScript files -->
     <script src='js/jquery.min.js'></script>
@@ -15,11 +13,11 @@
   </head>
 
 
-  <body id="index_page">
+  <body id="incomplete_page">
     <div class="page-header">
       <section class="user-logged-in"> </section>
       <section class="page-title">
-        <h2>i-QRQC - Grand Rapids</h2>
+        <h2>Incomplete e-Lerts</h2>
       </section>      
       <section class="log-button ng-scope"> </section>
     </div>
@@ -64,11 +62,7 @@
     <div class="mycontainer">
       <table class="page-footer">
         <tr>
-          <td class="btn btn-white table_button" id="new_alert_redirect">Create new e-Lert</td>
-
-          <!--<td><a href="mixing.html" class="btn btn-white table_button" id="mixing_alert_redirect">Mixing e-Lerts</a></td>
-        
-          <td><a href="incomplete.html" class="btn btn-white table_button" id="incomplete_redirect">Incomplete e-Lerts</a></td>-->
+          <td><a href="/" class="btn btn-white table_button" id="home_redirect">Return Home</a></td>
         </tr>
       </table>
 
