--- a/public/admin/mixing.html
+++ b/public/admin/mixing.html
@@ -2,12 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Incomplete e-Alerts</title>
+    <title>Current Mixing e-Alerts</title>
     
     <!-- Load CSS -->  
-    <link rel="stylesheet" href="css/oc-modal.full.css">
-    <link rel="stylesheet" href="css/jquery.datetimepicker.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <!-- Load JavaScript files -->
     <script src='js/jquery.min.js'></script>
@@ -15,14 +13,12 @@
   </head>
 
 
-  <body id="incomplete_page">
-    <div class="page-header">
+  <body id="mixing_page">
       <section class="user-logged-in"> </section>
       <section class="page-title">
-        <h2>Incomplete e-Lerts</h2>
+        <h2>iQRQC Mixing</h2>
       </section>      
       <section class="log-button ng-scope"> </section>
-    </div>
     
 
     <table id="issues_table">
@@ -64,10 +60,13 @@
     <div class="mycontainer">
       <table class="page-footer">
         <tr>
-          <td><a href="/" class="btn btn-white table_button" id="home_redirect">Return Home</a></td>
+          <td class="btn btn-white table_button" id="return_home">Return Home</td>
+
+          <td class="btn btn-white table_button" id="mixing_alert_redirect">New Mixing Alert</td>
         </tr>
       </table>
 
     </div>
+
   </body>
 </html>
