--- a/public/admin/mixing_alert.html
+++ b/public/admin/mixing_alert.html
@@ -5,9 +5,7 @@
     <title>e-Lert</title>
     
     <!-- Load CSS -->  
-    <link rel="stylesheet" href="css/oc-modal.full.css">
-    <link rel="stylesheet" href="css/jquery.datetimepicker.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <!-- Load JavaScript files -->
     <script src='js/jquery.min.js'></script>
@@ -18,7 +16,7 @@
   <body id="create_page">
     <section class="user-logged-in"> </section>
     <section class="page-title">
-      <h2 >I-QRQC - Mixing- e-Lert</h2>
+      <h2 >iQRQC - Mixing e-Lert</h2>
     </section>
     <section class="log-button ng-scope"> </section>
     
@@ -37,7 +35,7 @@
       <table class="inline_table" id="info_table">        
         <tr >
             <td class="left_column">
-              I-Notes Category:
+              iNotes Category:
             </td>
             <td class="right_column">
               <p class="box_length" id="alert_type"> </p>    
