Auto refresh home page, minor email fixes

--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -187,7 +187,10 @@
               </td>
               <td class="action_column" id="">
                 State
-              </td>              
+              </td>
+              <td class="action_column" id="">
+                Email Sent
+              </td>             
           </tr>
 
           <tr class="hidden_element">
@@ -197,6 +200,7 @@
                 <select class="added_row" id='responsible'> </select>
               </td>
               <td class="hidden_element"> </td>                
+              <td class="hidden_element"> </td>
               <td class="hidden_element"> </td>
               <td class="hidden_element"> </td>
               <td class="hidden_element"> </td>
@@ -210,14 +214,9 @@
         <tr>
           <td> <button class="btn btn-white table_button" id="add_row" type="button">Add Action</button></td>
           <td> <button class="btn btn-white table_button" id="submit_btn">Submit</button></td>
-          <td> <button class="btn btn-white table_button" id="return_home">Return to Main Page</button></td>
-          
+          <td> <button class="btn btn-white table_button" id="return_home">Return to Main Page</button></td>          
         </tr>
       </table>
-
-    </div>
-    <div>
-      
     </div> 
   </body>
 </html>
