--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -40,8 +40,8 @@
     </div>
 
     <table id="category_table">
-      <tr>
-          <td > 
+      <tr class="category_rows">
+          <td> 
               <p class="categories" id="Safety"   >Safety/ Environment</p>
               <p class="categories" id="Quality"  >Quality</p>
               <p class="categories" id="Activity" >Activity (Sales)</p>
@@ -49,7 +49,7 @@
               <p class="categories" id="Scrap"    >Scrap</p>
           </td>
       </tr>
-      <tr>
+      <tr class="category_rows">
           <td >
               <p class="categories" id="Hr"       >HR/ Labor</p>
               <p class="categories" id="Delivery" >Delivery</p>
