Changed date format, remove Mixing button

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -65,9 +65,9 @@
         <tr>
           <td class="btn btn-white table_button" id="new_alert_redirect">Create new e-Lert</td>
 
-          <td><a href="mixing.html" class="btn btn-white table_button" id="mixing_alert_redirect">Mixing e-Lerts</a></td>
+          <!--<td><a href="mixing.html" class="btn btn-white table_button" id="mixing_alert_redirect">Mixing e-Lerts</a></td>
         
-          <!--<td><a href="incomplete.html" class="btn btn-white table_button" id="incomplete_redirect">Incomplete e-Lerts</a></td>-->
+          <td><a href="incomplete.html" class="btn btn-white table_button" id="incomplete_redirect">Incomplete e-Lerts</a></td>-->
         </tr>
       </table>
 
