Added HAVS logo to webpages, owner option change based on level

--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -18,7 +18,9 @@
     <section class="page-title">
       <h2 >iQRQC - Grand Rapids - e-Lert</h2>
     </section>
-    <section class="log-button ng-scope"> </section>
+    <section class="log-button ng-scope">
+      <img src="../images/logo.jpg" alt="" height="50px" width="75px">
+    </section>
     
 
     <form id="gen_info">
@@ -70,12 +72,12 @@
             <td class="right_column">
               <select class="box_length" id="department">
                 <!--<option value="Empty"       >---</option>-->
+                <option value="Plant"       >Plant</option>
                 <option value="Mixing"      >Mixing</option>
                 <option value="Cementing"   >Cementing</option>
                 <option value="Automation"  >Automation</option>
-                <option value="Office"      >Office</option>
-                <option value="Ship_Receive">Shipping/Receiving</option>
-                <option value="Plant"       >Plant</option>
+                <!--<option value="Office"      >Office</option>
+                <option value="Ship_Receive">Shipping/Receiving</option>-->
               </select>
             </td>
         </tr>
