--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -19,7 +19,9 @@
       <section class="page-title">
         <h2>iQRQC - Grand Rapids</h2>
       </section>      
-      <section class="log-button ng-scope"> </section>
+      <section class="log-button ng-scope">
+        <img src="../images/logo.jpg" alt="" height="50px" width="75px">
+      </section>
     </div>
     
 
