--- a/public/admin/mixing.html
+++ b/public/admin/mixing.html
@@ -18,8 +18,9 @@
       <section class="page-title">
         <h2>iQRQC Mixing</h2>
       </section>      
-      <section class="log-button ng-scope"> </section>
-    
+      <section class="log-button ng-scope">
+        <img src="../images/logo.jpg" alt="" height="50px" width="75px">
+      </section>
 
     <table id="issues_table">
       <tr>
