--- a/public/admin/mixing_alert.html
+++ b/public/admin/mixing_alert.html
@@ -18,7 +18,9 @@
     <section class="page-title">
       <h2 >iQRQC - Mixing e-Lert</h2>
     </section>
-    <section class="log-button ng-scope"> </section>
+    <section class="log-button ng-scope">
+      <img src="../images/logo.jpg" alt="" height="50px" width="75px">
+    </section>
     
 
     <form id="gen_info">
