Delete button is functional, fixed an issue where Open status isn't grabbed from webpage

--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -10,7 +10,6 @@
     <!-- Load JavaScript files -->
     <script src='js/jquery.min.js'></script>
     <script src='js/core.js'></script>
-    <script src='js/md5.js'></script>
   </head>
 
 
@@ -194,9 +193,9 @@
               <td class="action_column end" id="action_email">
                 Email Sent
               </td>
-              <!--<td class="action_column end">
+              <td class="action_column end">
                 Delete
-              </td>-->
+              </td>
           </tr>
 
           <tr class="hidden_element">
