--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -168,34 +168,16 @@
       </div>
 
       <table id="action_table">
-          <tr>
-              <td class="action_column" id="action_type">
-                Type
-              </td>
-              <td class="action_column" id="action_desc">
-                Description
-              </td>
-              <td class="action_column" id="action_owner">
-                Owner
-              </td>
-              <td class="action_column" id="action_start">
-                Start
-              </td>
-              <td class="action_column" id="action_deadline">
-                Deadline
-              </td>
-              <td class="action_column end" id="action_complete">
-                Completed
-              </td>
-              <td class="action_column end" id="action_state">
-                State
-              </td>
-              <td class="action_column end" id="action_email">
-                Email Sent
-              </td>
-              <td class="action_column end">
-                Delete
-              </td>
+          <tr id="action_header">
+              <td class="shorten_td"     id="action_type">Type </td>
+              <td class="action_column"     id="action_desc">Description </td>
+              <td class="action_column"     id="action_owner">Owner </td>
+              <td class="date_td"     id="action_start">Start </td>
+              <td class="date_td"     id="action_deadline">Deadline </td>
+              <td class="date_td" id="action_complete">Completed </td>
+              <td class="shorten_td" id="action_state">State </td>
+              <td class="shorten_td" id="action_email">Email Sent </td>
+              <td class="shorten_td"> Delete </td>
           </tr>
 
           <tr class="hidden_element">
