Mixing level is up and running

--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -200,7 +200,7 @@
       <table class="page-footer">
         <tr>
           <td> <button class="btn btn-white table_button" id="add_row" type="button">Add Action</button></td>
-          <td> <button class="btn btn-white table_button" id="submit_btn">Submit</button></td>
+          <td> <button class="btn btn-white table_button" id="submit_plant">Submit</button></td>
           <td> <button class="btn btn-white table_button" id="return_home">Return to Main Page</button></td>          
         </tr>
       </table>
