Added date and time to index

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -15,7 +15,10 @@
 
   <body id="index_page">
     <div class="page-header">
-      <section class="user-logged-in"> </section>
+      <section class="user-logged-in">
+        <div id="Date"></div>
+        <div id="Time"></div>
+      </section>
       <section class="page-title">
         <h2>iQRQC - Grand Rapids</h2>
       </section>      
