--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -47,20 +47,20 @@
     <table id="category_table">
       <tr class="category_rows">
           <td> 
-              <p class="categories" id="Safety"   >Safety/ Environment</p>
-              <p class="categories" id="Quality"  >Quality</p>
-              <p class="categories" id="Activity" >Activity (Sales)</p>
-              <p class="categories" id="Inventory">Inventory</p>
-              <p class="categories" id="Scrap"    >Scrap</p>
+              <button type="button" class="categories" id="Safety"   >Safety/ Environment</button>
+              <button type="button" class="categories" id="Quality"  >Quality</button>
+              <button type="button" class="categories" id="Activity" >Activity (Sales) </button>
+              <button type="button" class="categories" id="Inventory">Inventory</button>
+              <button type="button" class="categories" id="Scrap"    >Scrap</button>
           </td>
       </tr>
       <tr class="category_rows">
           <td >
-              <p class="categories" id="Hr"       >HR/ Labor</p>
-              <p class="categories" id="Delivery" >Delivery</p>
-              <p class="categories" id="Operation">Operations Efficiency</p>
-              <p class="categories" id="Supply"   >Supply Chain</p>
-              <p class="categories" id="Misc"     >Miscellaneaous</p>
+              <button type="button" class="categories" id="Hr"       >HR/ Labor</button>
+              <button type="button" class="categories" id="Delivery" >Delivery </button>
+              <button type="button" class="categories" id="Operation">Operations Efficiency</button>
+              <button type="button" class="categories" id="Supply"   >Supply Chain </button>
+              <button type="button" class="categories" id="Misc"     >Miscellaneaous </button>
           </td>
       </tr>
     </table>
@@ -68,9 +68,9 @@
     <div class="mycontainer">
       <table class="page-footer">
         <tr>
-          <td class="btn btn-white table_button" id="new_alert_redirect">Create new e-Lert</td>
+          <!--<td class="btn btn-white table_button" id="new_alert_redirect">Create new e-Lert</td>
 
-          <!--<td><a href="mixing.html" class="btn btn-white table_button" id="mixing_alert_redirect">Mixing e-Lerts</a></td>
+          <td><a href="mixing.html" class="btn btn-white table_button" id="mixing_alert_redirect">Mixing e-Lerts</a></td>
         
           <td><a href="incomplete.html" class="btn btn-white table_button" id="incomplete_redirect">Incomplete e-Lerts</a></td>-->
         </tr>
