lots of mistakes from last push fixed, thinned out css

--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -40,7 +40,7 @@
               i-Notes Category:
             </td>
             <td class="right_column">
-              <select class="box_length Safety" id="alert_type" 
+              <select class="box_length" id="alert_type" 
                 onchange="this.className=this.options[this.selectedIndex].className">
                 <option value="Safety"    class="Safety">Safety/Environment</option>
                 <option value="Quality"   class="Quality">Quality</option>
