--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -47,20 +47,20 @@
     <table id="category_table">
       <tr class="category_rows">
           <td> 
-              <button type="button" class="categories Safety">Safety/ Environment</button>
-              <button type="button" class="categories Quality">Quality</button>
-              <button type="button" class="categories Activity">Activity (Sales) </button>
-              <button type="button" class="categories Inventory">Inventory</button>
-              <button type="button" class="categories Scrap">Scrap</button>
+              <button type="button" class="categories Safety"    id='Safety'>Safety/ Environment</button>
+              <button type="button" class="categories Quality"   id='Quality'>Quality</button>
+              <button type="button" class="categories Activity"  id='Activity'>Activity (Sales) </button>
+              <button type="button" class="categories Inventory" id='Inventory'>Inventory</button>
+              <button type="button" class="categories Scrap"     id='Scrap'>Scrap</button>
           </td>
       </tr>
       <tr class="category_rows">
           <td >
-              <button type="button" class="categories Hr">HR/ Labor</button>
-              <button type="button" class="categories Delivery">Delivery </button>
-              <button type="button" class="categories Operation">Operations Efficiency</button>
-              <button type="button" class="categories Supply">Supply Chain </button>
-              <button type="button" class="categories Misc">Miscellaneaous </button>
+              <button type="button" class="categories Hr"        id='Hr'>HR/ Labor</button>
+              <button type="button" class="categories Delivery"  id='Delivery'>Delivery </button>
+              <button type="button" class="categories Operation" id='Operation'>Operations Efficiency</button>
+              <button type="button" class="categories Supply"    id='Supply'>Supply Chain </button>
+              <button type="button" class="categories Misc"      id='Misc'>Miscellaneaous </button>
           </td>
       </tr>
     </table>
