Added a very basic login screen

--- a/public/login.html
+++ b/public/login.html
@@ -30,7 +30,7 @@
                     <input id="password" type="password" name="password" placeholder="Password" method="post" required />
                 </div>
                 <div>
-                    <button id="login_button" type="submit" class="btn btn-white" method="post">Login</button>
+                    <button id="login_button" type="button" class="btn btn-white" method="post">Login</button>
                 </div>
             </form>
         </div>
