--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -19,7 +19,7 @@
       <h2 >iQRQC - Grand Rapids - e-Lert</h2>
     </section>
     <section class="log-button ng-scope">
-      <img src="../images/logo.jpg" alt="" height="50px" width="75px">
+      <img src="../images/logo.jpg" alt="" height="50px" width="250px">
     </section>
     
 
@@ -40,8 +40,7 @@
               i-Notes Category:
             </td>
             <td class="right_column">
-              <select class="box_length" id="alert_type" 
-                onchange="this.className=this.options[this.selectedIndex].className">
+              <select class="box_length" id="alert_type" onchange="this.className=this.options[this.selectedIndex].className">
                 <option value="Safety"    class="Safety">Safety/Environment</option>
                 <option value="Quality"   class="Quality">Quality</option>
                 <option value="Activity"  class="Activity">Activity (Sales)</option>
@@ -71,10 +70,10 @@
             </td>
             <td class="right_column">
               <select class="box_length" id="department">
-                <option value="Plant"       >Plant</option>
-                <option value="Mixing"      >Mixing</option>
-                <option value="Cementing"   >Cementing</option>
-                <option value="Automation"  >Automation</option>
+                <option value="Plant"     >Plant</option>
+                <option value="Mixing"    >Mixing</option>
+                <option value="Cementing" >Cementing</option>
+                <option value="Automation">Automation</option>
                 <!--<option value="Office"      >Office</option>
                 <option value="Ship_Receive">Shipping/Receiving</option>-->
               </select>
@@ -203,6 +202,11 @@
           <td> <button class="btn btn-white table_button" id="return_home">Return to Main Page</button></td>          
         </tr>
       </table>
-    </div> 
+    </div>
+
+    <script>
+      var dropdown = document.querySelector('select');
+      dropdown.className = dropdown.options[dropdown.selectedIndex].className;
+    </script>
   </body>
 </html>
