--- a/public/login.html
+++ b/public/login.html
@@ -9,6 +9,7 @@
         <!-- Load JavaScript files -->
         <script src='js/jquery.min.js'></script>
         <script src='js/core.js'></script>
+        <script src='js/js.cookie.js'></script>
     </head>
         
 
@@ -22,12 +23,12 @@
                     <div class="error-message">
                 <p class="error"></p>
             </div>
-            <form id="login_form" ng-submit="handleLoginForm()">
+            <form id="login_form" ng-submit="handleLoginForm()" >
                 <div>
-                    <input id="username" type="text" name="username" placeholder="Username" method="post" required />
+                    <input id="username" type="text" name="username" placeholder="Username" required />
                 </div>
                 <div>
-                    <input id="password" type="password" name="password" placeholder="Password" method="post" required />
+                    <input id="password" type="password" name="password" placeholder="Password" required />
                 </div>
                 <div>
                     <button id="login_button" type="button" class="btn btn-white" method="post">Login</button>
