added a view page need to login to edit

--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -38,7 +38,7 @@
       <table class="inline_table" id="info_table">        
         <tr >
             <td class="left_column">
-              i-Notes Category:
+              e-Lert Category:
             </td>
             <td class="right_column">
               <select class="box_length" id="alert_type" onchange="this.className=this.options[this.selectedIndex].className">
