modified view mode to allow opening postit

--- a/public/admin/view_alert.html
+++ b/public/admin/view_alert.html
@@ -17,7 +17,7 @@
   <body id="create_page">
     <section class="user-logged-in"> </section>
     <section class="page-title">
-      <h2 >iQRQC - Grand Rapids - e-Lert</h2>
+      <h2 >iQRQC - Grand Rapids - e-Lert View</h2>
     </section>
     <section class="log-button ng-scope">
       <img src="../images/logo.jpg" alt="" height="50px" width="250px">
@@ -198,16 +198,14 @@
     <div class="mycontainer">
       <table class="page-footer">
         <tr>
-          <td> <button class="btn btn-white table_button" id="add_row" type="button">Add Action</button></td>
-          <td> <button class="btn btn-white table_button" id="submit_plant">Submit</button></td>
-          <td> <button class="btn btn-white table_button" id="return_home">Return to Main Page</button></td>          
+          <td> <a href="/" class="btn btn-white table_button">Return to View Page</button></td>          
         </tr>
       </table>
     </div>
 
     <script>
-      //var dropdown = document.querySelector('select');
-      //dropdown.className = dropdown.options[dropdown.selectedIndex].className;
+      var dropdown = document.querySelector('select');
+      dropdown.className = dropdown.options[dropdown.selectedIndex].className;
     </script>
   </body>
 </html>
