Core changes, view fixes, login fixes

--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -8,14 +8,17 @@
     <link rel="stylesheet" href="../css/style.css">
 
     <!-- Load JavaScript files -->
-    <script src='js/jquery.min.js'></script>
+    <script src='js/jquery-3.1.1.min.js'></script>
     <script src='js/core.js'></script>
     <script src='js/js.cookie.js'></script>
   </head>
 
 
   <body id="create_page">
-    <section class="user-logged-in"> </section>
+    <section class="user-logged-in">
+          <div id="Date"></div>
+          <div id="Time"></div>
+      </section>
     <section class="page-title">
       <h2 >iQRQC - Grand Rapids - e-Lert</h2>
     </section>
