--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/style.css">
 
     <!-- Load JavaScript files -->
-    <script src='js/jquery.min.js'></script>
+    <script src='js/jquery-3.1.1.min.js'></script>
     <script src='js/core.js'></script>
     <script src='js/js.cookie.js'></script>
   </head>
@@ -48,20 +48,20 @@
     <table id="category_table">
       <tr class="category_rows">
           <td> 
-              <button type="button" class="categories Safety"    id='Safety'>Safety/ Environment</button>
-              <button type="button" class="categories Quality"   id='Quality'>Quality</button>
-              <button type="button" class="categories Activity"  id='Activity'>Activity (Sales) </button>
-              <button type="button" class="categories Inventory" id='Inventory'>Inventory</button>
-              <button type="button" class="categories Scrap"     id='Scrap'>Scrap</button>
+              <button type="button" class="categories Safety"    id="Safety">Safety/ Environment</div>
+              <button type="button" class="categories Quality"   id="Quality">Quality</div>
+              <button type="button" class="categories Activity"  id="Activity">Activity (Sales)</div>
+              <button type="button" class="categories Inventory" id="Inventory">Inventory</div>
+              <button type="button" class="categories Scrap"     id="Scrap">Scrap</div>
           </td>
       </tr>
       <tr class="category_rows">
           <td >
-              <button type="button" class="categories Hr"        id='Hr'>HR/ Labor</button>
-              <button type="button" class="categories Delivery"  id='Delivery'>Delivery </button>
-              <button type="button" class="categories Operation" id='Operation'>Operations Efficiency</button>
-              <button type="button" class="categories Supply"    id='Supply'>Supply Chain </button>
-              <button type="button" class="categories Misc"      id='Misc'>Miscellaneaous </button>
+              <button type="button" class="categories Hr"        id="Hr">HR/ Labor</div>
+              <button type="button" class="categories Delivery"  id="Delivery">Delivery</div>
+              <button type="button" class="categories Operation" id="Operations">Operations Efficiency</div>
+              <button type="button" class="categories Supply"    id="Supply">Supply Chain</div>
+              <button type="button" class="categories Misc"      id="Misc">Miscellaneaous</div>
           </td>
       </tr>
     </table>
