--- a/public/view.html
+++ b/public/view.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/style.css">
 
     <!-- Load JavaScript files -->
-    <script src='js/jquery.min.js'></script>
+    <script src='js/jquery-3.1.1.min.js'></script>
     <script src='js/core.js'></script>
     <script src='js/js.cookie.js'></script>
   </head>
@@ -48,20 +48,20 @@
     <table id="category_table">
       <tr class="category_rows">
           <td> 
-              <div class="categories Safety"    >Safety/ Environment</div>
-              <div class="categories Quality"   >Quality</div>
-              <div class="categories Activity"  >Activity (Sales) </div>
-              <div class="categories Inventory" >Inventory</div>
-              <div class="categories Scrap"     >Scrap</div>
+              <p class="categories Safety"    >Safety/ Environment</p>
+              <p class="categories Quality"   >Quality</p>
+              <p class="categories Activity"  >Activity (Sales)</p>
+              <p class="categories Inventory" >Inventory</p>
+              <p class="categories Scrap"     >Scrap</p>
           </td>
       </tr>
       <tr class="category_rows">
           <td >
-              <div class="categories Hr"        >HR/ Labor</div>
-              <div class="categories Delivery"  >Delivery </div>
-              <div class="categories Operation" >Operations Efficiency</div>
-              <div class="categories Supply"    >Supply Chain </div>
-              <div class="categories Misc"      >Miscellaneaous </div>
+              <p class="categories Hr"        >HR/ Labor</p>
+              <p class="categories Delivery"  >Delivery</p>
+              <p class="categories Operation" >Operations Efficiency</p>
+              <p class="categories Supply"    >Supply Chain</p>
+              <p class="categories Misc"      >Miscellaneaous</p>
           </td>
       </tr>
     </table>
