--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8">
         <title>iQRQC Login</title>
 
-        <link rel="stylesheet" href="css/style.css">
+     <!-- Load CSS -->  
+    <link rel="stylesheet" href="../css/style.css">
 
-        <!-- Load JavaScript files -->
-        <script src='js/jquery.min.js'></script>
-        <script src='js/core.js'></script>
-        <script src='js/js.cookie.js'></script>
+    <!-- Load JavaScript files -->
+    <script src='js/jquery-3.1.1.min.js'></script>
+    <script src='js/core.js'></script>
+    <script src='js/js.cookie.js'></script>
     </head>
         
 
@@ -25,15 +26,28 @@
             </div>
             <form id="login_form" ng-submit="handleLoginForm()" >
                 <div>
-                    <input id="username" type="text" name="username" placeholder="Username" required />
+                    <input onkeypress="return Press_Enter(event);" id="username" type="text" name="username" placeholder="Username" required />
                 </div>
                 <div>
-                    <input id="password" type="password" name="password" placeholder="Password" required />
+                    <input onkeypress="return Press_Enter(event);" id="password" type="password" name="password" placeholder="Password" required />
                 </div>
                 <div>
                     <button id="login_button" type="button" class="btn btn-white" method="post">Login</button>
                 </div>
             </form>
         </div>
+
+         <script>
+          function Press_Enter(e){
+            // look for window.event in case event isn't passed in
+            e = e || window.event;
+            if (e.keyCode == 13)
+            {
+                document.getElementById('login_button').click();
+                return false;
+            }
+            return true;
+          }
+        </script>
     </body>
 </html>
