--- a/public/admin/mixing.html
+++ b/public/admin/mixing.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <title>Current Mixing e-Alerts</title>
     
-    <!-- Load CSS -->  
+      <!-- Load CSS -->  
     <link rel="stylesheet" href="../css/style.css">
 
     <!-- Load JavaScript files -->
-    <script src='js/jquery.min.js'></script>
+    <script src='js/jquery-3.1.1.min.js'></script>
     <script src='js/core.js'></script>
+    <script src='js/js.cookie.js'></script>
   </head>
 
 
   <body id="mixing_page">
-      <section class="user-logged-in"> </section>
+      <section class="user-logged-in">
+          <div id="Date"></div>
+          <div id="Time"></div>
+      </section>
       <section class="page-title">
         <h2>iQRQC Mixing</h2>
       </section>      
