--- a/public/admin/mixing_alert.html
+++ b/public/admin/mixing_alert.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>e-Lert</title>
     
-    <!-- Load CSS -->  
+     <!-- Load CSS -->  
     <link rel="stylesheet" href="../css/style.css">
 
     <!-- Load JavaScript files -->
-    <script src='js/jquery.min.js'></script>
+    <script src='js/jquery-3.1.1.min.js'></script>
     <script src='js/core.js'></script>
+    <script src='js/js.cookie.js'></script>
   </head>
 
 
