Typo fixed for element id on index page

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -59,7 +59,7 @@
           <td >
               <button type="button" class="categories Hr"        id="Hr">HR/ Labor</div>
               <button type="button" class="categories Delivery"  id="Delivery">Delivery</div>
-              <button type="button" class="categories Operation" id="Operations">Operations Efficiency</div>
+              <button type="button" class="categories Operation" id="Operation">Operations Efficiency</div>
               <button type="button" class="categories Supply"    id="Supply">Supply Chain</div>
               <button type="button" class="categories Misc"      id="Misc">Miscellaneaous</div>
           </td>
